tests/NormalTests/paczka2/big_fuzzy/26166456.err
Error in line 1: KDOisd A867 75,8
Error in line 2: A556 A355 68,7
Error in line 18: 7pXk A556 63,5
Error in line 23: dbk5AHb04 A556 67,6
Error in line 19: 7pXk A355 52,6
Error in line 24: dbk5AHb04 A355 75,6
Error in line 39: dbk5AHb04 A355 89,7
Error in line 43: KDOisd A355 37,5
Error in line 51: A556 A556 77,4
Error in line 49: kc3 A556 4,9
Error in line 53: kc3 A355 29,8
Error in line 60: A556 A556 89,80
Error in line 41: dbk5AHb04 A867 71,0
Error in line 68: 7pXk A867 45,8
Error in line 69: kc3 S662 46,0
Error in line 67: 45zK4 A867 45,0
Error in line 83: 7pXk A355 54,2
Error in line 78: A556 A556 354,2
Error in line 118: 7pXk A556 70,8
Error in line 131: KDOisd A867 2,4
Error in line 135: dbk5AHb04 A355 50,7
Error in line 139: 1dFT9g7 A355 88,0
Error in line 146: 1dFT9g7 A355 61,9
Error in line 143: kc3 A556 28,3
Error in line 158: KDOisd A867 48,4
Error in line 112: A556 S662 27,2
Error in line 165: KDOisd A556 49,95
Error in line 164: A556 A867 60,7
Error in line 161: 1dFT9g7 A556 36,0
Error in line 163: KDOisd A556 46,3
Error in line 183: KDOisd A355 22,3
Error in line 179: kc3 A556 169,1
Error in line 193: 45zK4 A355 11,1
Error in line 198: KDOisd A355 37,3
Error in line 199: A556 A867 95,8
Error in line 215: dbk5AHb0k A556 32,k
Error in line 220: dbk5AHb04 A867 76,34
Error in line 222: kc3 A867 95,7
Error in line 219: dbk5AHb04 S662 37,7
Error in line 224: kc3 A355 36,5
Error in line 227: kc3 A867 21,6
Error in line 231: kc3 S662 28,8
Error in line 230: 7pXk S662 83,0
Error in line 232: dbk5AHb04 A556 325,9
Error in line 234: 7pXk A556 38,9
